--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,40 +13,40 @@ env:
   IMAGE_NAME: "mathieuhays/uptime"
 
 jobs:
-#  tests:
-#    name: Tests
-#    runs-on: linux
-#
-#    steps:
-#      - name: Check out code
-#        uses: actions/checkout@v4
-#
-#      - name: Set up Go
-#        uses: actions/setup-go@v5
-#        with:
-#          go-version: '1.23'
-#
-#      - name: Install gosec
-#        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
-#
-#      - name: Unit tests
-#        run: go test -cover ./...
-#
-#      - name: Security check
-#        run: gosec ./...
-#
-#      - name: Install staticcheck
-#        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-#
-#      - name: Formatting
-#        run: test -z $(go fmt ./...)
-#
-#      - name: Static check
-#        run: staticcheck ./...
+  tests:
+    name: Tests
+    runs-on: linux
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+
+      - name: Install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Unit tests
+        run: go test -cover ./...
+
+      - name: Security check
+        run: gosec ./...
+
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+      - name: Formatting
+        run: test -z $(go fmt ./...)
+
+      - name: Static check
+        run: staticcheck ./...
 
   build:
     name: Build
-#    needs: tests
+    needs: tests
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
 
